header changes + spacing fix

--- a/static/main.css
+++ b/static/main.css
@@ -373,3 +373,9 @@ nav {
     opacity:1;
     transform:scale(1);
 }
+
+/* .emptyspace {
+    height:120px;
+    width:100%;
+    background: #222d23;
+} */
