--- a/static/screener_results.css
+++ b/static/screener_results.css
@@ -1,13 +1,13 @@
 body {
-    background-color: #232f27;
+    background-color: #222d23;
 }
 
 #results_table {
-    padding-top: 100px;
+    margin:auto;
     text-align: center;
     background-color: white;
     word-wrap: break-word;
-    font-size: 0.9em;
+    font-size: 0.8em;
     font-family: sans-serif;
 }
 
@@ -25,7 +25,7 @@ body {
 
 #results_table th,
 #results_table td {
-    padding: 12px 15px;
+    padding: 5px 5px;
 }
 
 #results_table tbody tr {
@@ -38,4 +38,9 @@ body {
 
 #results_table tbody tr:last-of-type {
     border-bottom: 2px solid #009879;
+}
+
+.emptyspace {
+    height:120px;
+    width:100%;
 }
